--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ section{
     --main-background-color: #F8F8F8;
     --colour-1: #212121;
     --colour-2: rgba(153,153,153,.7);
+    --colour-3:  rgb(0 0 0 / 0.2);
 }
 
 /* Typography */
@@ -62,19 +63,20 @@ li {
 
 
 /* Navigation Bar */
-/* .logo{
+.logo{
     height: 100%;
     width: 100%;
-    object-fit: contain;
+    object-fit: contain; 
     position: absolute;
     left: 0; 
     margin-top: 25px;
     margin: 25px 0 0 75px ;
+    pointer-events: none 
 }
 
 .logo a {
     color: var(--colour-1);
-}  */
+} 
 
 .navbar{
     min-height: 70px;
@@ -123,6 +125,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 #text-two {
@@ -161,7 +164,10 @@ li {
 
 
 
+
+
 /* PROJECT section */
+
 .projects-container {
     display: grid;
     grid-gap: 16px;
@@ -173,10 +179,9 @@ li {
 }
 
 .projects-container .col{
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    box-shadow: 0 3px 10px var(--colour-3);
     margin-bottom: 16px;
-    padding: 16px;
-    
+    padding: 16px;  
 }
 
 
@@ -194,11 +199,6 @@ footer {
     padding: 15px 0;
 }
 
-#social-links{
-    color: var(--colour-1);
-    padding-bottom: 5px;
-
-}
 
 #Copyright {
     font-size: 15px
@@ -233,7 +233,7 @@ footer {
         position: fixed;
         top: 0; right: 0;
         display: block;
-        padding: 5px 25px;
+        /* padding: 5px 25px; */
     }
 
     .hamburger.active .bar:nth-child(2){
@@ -268,6 +268,10 @@ footer {
     }
     .nav-menu.active{
         left: 0;
+    }
+
+    .logo{
+        display: none;
     }
 
 
