Experience table changes
Start applying improvements based on feedback given

--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ li {
     text-align: left;
 }
 
-.column-1 {
+/* .column-1 {
   width: 90%;
   height: auto;
   padding-top:50px;
@@ -202,10 +202,10 @@ li {
   margin-bottom:50px;
   margin-top: 75px;
   background-color: var(--colour-1);
-}
+} */
 
 /* Table formatting */
-.table-style {
+/* .table-style {
   width:100%;
   border-spacing: 24px;
 }
@@ -214,8 +214,38 @@ tr, td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid var(--colour-3); 
+} */
+table {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    table-layout: fixed;
 }
   
+table caption {
+    font-size: 1.5em;
+    margin: .5em 0 .75em;
+}
+  
+table tr {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    padding: .35em;
+}
+  
+table th,
+table td {
+    padding: .625em;
+    text-align: center;
+}
+  
+table th {
+    font-size: .85em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+}
 
 
 
@@ -442,7 +472,7 @@ footer {
 
     /* EXPERIENCE */
     /* This part needs improving! */
-    .table-style{
+    /* .table-style{
         width: 100%;
         border-collapse: collapse;
     }
@@ -450,8 +480,52 @@ footer {
     td{
         padding-right: 10px;
         text-align: left;
-    }
+    } */
 
+    /* Table formatting */
+    table {
+        border: 0;
+    }
+    
+    table caption {
+        font-size: 1.3em;
+    }
+      
+    table thead {
+        border: none;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
+      
+    table tr {
+        border-bottom: 3px solid #ddd;
+        display: block;
+        margin-bottom: .625em;
+    }
+      
+    table td {
+        border-bottom: 1px solid #ddd;
+        display: block;
+        font-size: .8em;
+        text-align: right;
+      }
+      
+    table td::before {
+        content: attr(data-label);
+        float: left;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+      
+    table td:last-child {
+        border-bottom: 0;
+    }
+    
 
 
     /* PROJECTS */
