--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ li {
     justify-content: space-between;
     align-items:center;
     gap: 30px;
+    z-index: 1;
 }
 
 .nav-link{
@@ -107,6 +108,7 @@ li {
 .hamburger{
     display: none;
     cursor: pointer;
+    z-index: 1;
 }
 
 .bar{
@@ -284,6 +286,8 @@ table th {
 	justify-content: center;
 	align-items: center;
 	padding: 20px 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .contact::after{
@@ -319,7 +323,7 @@ table th {
 	padding: 25px 40px;
 }
 
-.field{
+/* .field{
 	width: 100%;
 	border: 2px solid rgba(0, 0, 0, 0);
 	outline: none;
@@ -348,8 +352,39 @@ textarea{
 	outline: none;
 	cursor: pointer;
 	transition: .3s;
+} */
+
+label {
+    float: left;
 }
 
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+textarea{
+    min-height: 150px;
+}
+  
+input[type=submit] {
+	background-color: var(--colour-2);
+	color: var(--colour-1);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+input[type=submit]:hover {
+    background-color: #45a049;
+}
 
 
 .field:focus{
@@ -381,10 +416,6 @@ footer {
 
 
 /* ------------- Responsive Display ------------- */
-@media only screen and (max-device-width: 480px) {
-    
-}
-
 @media(max-width:768px){
 
     h1{
@@ -523,12 +554,23 @@ footer {
     }
 
     /* CONTACT */
+    .contact {
+        width: 100%;
+    }
+
     .contact-box{
 		grid-template-columns: 1fr;
+        width: 300px;
 	}
 	.left{
 		height: 200px;
 	}
+
+    .right {
+        width: 300px;
+    }
+
+
 
 
 
