--- a/styles.css
+++ b/styles.css
@@ -1,326 +1,325 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-/*The below removes that default margin: 8px */  
+/*The below removes that default margin: 8px */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    letter-spacing: 1px;
-    letter-spacing: 1px;
-    line-height: 1;
+  margin: 0;
+  letter-spacing: 1px;
+  letter-spacing: 1px;
+  line-height: 1;
 }
 
-section{
-    padding: 5em 2em; /* Equivalent 80px  32*/
-    height: 100vh; /* vh: 1/100th of the height of the viewport */
+section {
+  padding: 5em 2em; /* Equivalent 80px  32*/
+  height: 100vh; /* vh: 1/100th of the height of the viewport */
 }
 
 :root {
-    --main-background-color: #F8F8F8;
-    --accent-background-colour: #8dcdf4;
-    /* --font-colour-1: rgba(0,0,0,0.45) ; */
-    --font-colour-1: white ;
-    --font-colour-2:  #386D9D;
-    --box-shadow:  rgb(0 0 0 / 0.2);
-    --colour-1: #F5F5F5; /*White Smoke*/
-    --colour-2: #1F70C1;
-    --colour-3: #ddd;
+  --main-background-color: #f8f8f8;
+  --accent-background-colour: #8dcdf4;
+  /* --font-colour-1: rgba(0,0,0,0.45) ; */
+  --font-colour-1: white;
+  --font-colour-2: #386d9d;
+  --box-shadow: rgb(0 0 0 / 0.2);
+  --colour-1: #f5f5f5; /*White Smoke*/
+  --colour-2: #1f70c1;
+  --colour-3: #ddd;
 }
 
 /* Typography */
-h1, h2, a, p {
-    font-family: 'Lato' ,Helvetica, sans-serif;
-    margin-bottom: 25px;
-    color: var(--font-colour-1);
+h1,
+h2,
+a,
+p {
+  font-family: "Lato", Helvetica, sans-serif;
+  margin-bottom: 25px;
+  color: var(--font-colour-1);
 }
 
-h1{
-    font-size: 75px;
+h1 {
+  font-size: 75px;
 }
 
 h2 {
-    font-size: 55px;
+  font-size: 55px;
 }
 
-.skills h2, .experience h2, .contact h2, .skills p, .experience p{
-    color: #264766;
+.skills h2,
+.experience h2,
+.contact h2,
+.skills p,
+.experience p {
+  color: #264766;
 }
 
-p{
-    font-size: 24px;
-    line-height: 32px;   /* within paragraph */
-    margin-bottom: 30px; /* between paragraphs */
+p {
+  font-size: 24px;
+  line-height: 32px; /* within paragraph */
+  margin-bottom: 30px; /* between paragraphs */
 }
 
 /* Links */
-a, li {
-    font-size: 15px;   
+a,
+li {
+  font-size: 15px;
 }
 
 a {
-    text-decoration: none;
-    font-weight: bolder;
+  text-decoration: none;
+  font-weight: bolder;
 }
 
 li {
-    list-style-type: none;
-    padding: 5px 10px;
-    /* background-color:#fff;
+  list-style-type: none;
+  padding: 5px 10px;
+  /* background-color:#fff;
     border: solid #fff 1px;
     border-radius: 25px;
     border-width: 15px; */
 }
 
-
-
 /* Navigation Bar */
-.navbar{
-    min-height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 75px;
-    float: left; 
-    text-transform: uppercase;
+.navbar {
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 75px;
+  float: left;
+  text-transform: uppercase;
 }
 
-.nav-menu{
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    gap: 30px;
-    z-index: 1;
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  z-index: 1;
 }
 
-.nav-link{
-    transition: 0.3s ease-out;
+.nav-link {
+  transition: 0.3s ease-out;
 }
-.nav-link:hover{
-    color: var(--font-colour-2);
-}
-
-.hamburger{
-    display: none;
-    cursor: pointer;
-    z-index: 1;
+.nav-link:hover {
+  color: var(--font-colour-2);
 }
 
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3x ease-in-out;
-    transition: all 0.3x ease-in-out;
-    background-color: #1572B6;
+.hamburger {
+  display: none;
+  cursor: pointer;
+  z-index: 1;
 }
 
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3x ease-in-out;
+  transition: all 0.3x ease-in-out;
+  background-color: #1572b6;
+}
 
 /* ABOUT section */
 
-#about{
-    position: relative;
-    display: flex;
+#about {
+  position: relative;
+  display: flex;
 }
 
 .about {
-    background-image: url("img/homepage.jpg");
-    background-size: cover;
+  background-image: url("img/homepage.jpg");
+  background-size: cover;
 }
 
-.wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding: 70px 40px; */
-    padding: 70px 120px;
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 70px 40px; */
+  padding: 70px 120px;
 }
-.image-container{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .image-container img {
-    width: 300px;
-    height: 300px;
-    margin: 20px;
-    border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  margin: 20px;
+  border-radius: 50%;
 }
-
 
 .text-container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    font-size: 15px;
-    text-align: left;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  font-size: 15px;
+  text-align: left;
 }
 
-#social-links a{
-    padding: 20px;
-    font-size: 30px;
-    width: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;
-    color: white;
+#social-links a {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+  color: white;
 }
-
 
 /* SKILLS Section */
-.skills{
-    justify-content: center;
-    text-align: center;
+.skills {
+  justify-content: center;
+  text-align: center;
 }
 
 .skills-container {
-    display: grid;
-    grid-gap: 16px;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 16px;
-    height: 400px;
-    width: 100%;
-    text-align: center;
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 16px;
+  height: 400px;
+  width: 100%;
+  text-align: center;
 }
 
-
-.skills-container img{
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 35%;
+.skills-container img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 35%;
 }
-
 
 /* EXPERIENCE section */
 .experience {
-    text-align: center;
+  text-align: center;
 }
 
 .experience p {
-    vertical-align: baseline;
-    text-align: left;
-    margin: 10px;
+  vertical-align: baseline;
+  text-align: left;
+  margin: 10px;
 }
-
 
 /* Table formatting */
 table {
-    border: 1px solid #ccc;
-    border-collapse: collapse;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    table-layout: fixed;
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
 }
-  
+
 table caption {
-    font-size: 1.5em;
-    margin: .5em 0 .75em;
+  font-size: 1.5em;
+  margin: 0.5em 0 0.75em;
 }
-  
+
 table tr {
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    padding: .35em;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  padding: 0.35em;
 }
-  
+
 table th,
 table td {
-    padding: .625em;
-    text-align: center;
+  padding: 0.625em;
+  text-align: center;
 }
-  
+
 table th {
-    font-size: .85em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
+  font-size: 0.85em;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
-
-
-
 
 /* PROJECT section */
-.projects{
-    background-color: var(--accent-background-colour);
-    justify-content: center;
-    text-align: center;
+.projects {
+  background-color: var(--accent-background-colour);
+  justify-content: center;
+  text-align: center;
 }
 
 .projects h2 {
-    color: var(--font-colour-1);
+  color: #264766;
 }
-
 
 .projects-container {
-    display: grid;
-    grid-gap: 16px;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 16px;
-    height: 400px;
-    width: 100%;
-    text-align: center;
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 16px;
+  height: 400px;
+  width: 100%;
+  text-align: center;
 }
 
-.projects-container .col{
-    box-shadow: 0 3px 10px var(--box-shadow);
-    margin-bottom: 16px;
-    padding: 16px;  
-    background-color: var(--colour-1);
+.projects-container .col {
+  box-shadow: 0 3px 10px var(--box-shadow);
+  margin-bottom: 16px;
+  padding: 16px;
+  background-color: var(--colour-1);
 }
 
+.col p {
+  color: #264766;
+}
 
 /* CONTACT section */
 .contact {
-    position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px 100px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-.contact::after{
-    content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background-size: cover;
-	filter: blur(50px);
-	z-index: -1;
+.contact::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-size: cover;
+  filter: blur(50px);
+  z-index: -1;
 }
 
-.contact-box{
-	max-width: 850px;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	background-color: var(--main-background-color);
-	box-shadow: 0px 0px 19px 5px var(--box-shadow);
+.contact-box {
+  max-width: 850px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--main-background-color);
+  box-shadow: 0px 0px 19px 5px var(--box-shadow);
 }
 
-.left{
-	background: url("img/homepage.jpg") no-repeat center;
-	background-size: cover;
-	height: 100%;
+.left {
+  background: url("img/homepage.jpg") no-repeat center;
+  background-size: cover;
+  height: 100%;
 }
 
-.right{
-	padding: 25px 40px;
+.right {
+  padding: 25px 40px;
 }
 
 /* .field{
@@ -355,223 +354,207 @@ textarea{
 } */
 
 label {
-    float: left;
+  float: left;
+  color: #264766;
 }
 
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-textarea{
-    min-height: 150px;
-}
-  
-input[type=submit] {
-	background-color: var(--colour-2);
-	color: var(--colour-1);
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-  
-input[type=submit]:hover {
-    background-color: #45a049;
+textarea {
+  min-height: 150px;
 }
 
-
-.field:focus{
-    border: 2px solid var(--colour-2);
-    background-color: var(--colour-1);
+input[type="submit"] {
+  background-color: var(--colour-2);
+  color: var(--colour-1);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
 
+.field:focus {
+  border: 2px solid var(--colour-2);
+  background-color: var(--colour-1);
+}
 
 /*Footer Section */
 footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    position: auto;
-    text-align: center;
-    padding: 5px 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  position: auto;
+  text-align: center;
+  padding: 5px 0;
 }
 
 #Copyright {
-    font-size: 15px;
-    color: #264766;
+  font-size: 15px;
+  color: #264766;
 }
 
-
-
-
-
-
-
 /* ------------- Responsive Display ------------- */
-@media(max-width:768px){
+@media (max-width: 768px) {
+  h1 {
+    font-size: 45px;
+  }
 
-    h1{
-        font-size: 45px;
-    }
-    
-    h2 {
-        font-size: 35px;
-    }
+  h2 {
+    font-size: 35px;
+  }
 
-    p{
-        font-size: 18px;
-        line-height: 22px;   /* within paragraph */
-        margin-bottom: 30px; /* between paragraphs */
-    }
+  p {
+    font-size: 18px;
+    line-height: 22px; /* within paragraph */
+    margin-bottom: 30px; /* between paragraphs */
+  }
 
+  /* NAVIGATION & HAMBURGER MENU */
+  .hamburger {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: block;
+    padding: 5px 25px;
+  }
 
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 
-    /* NAVIGATION & HAMBURGER MENU */
-    .hamburger{
-        position: fixed;
-        top: 0; right: 0;
-        display: block;
-        padding: 5px 25px;
-    }
+  a {
+    text-decoration: none;
+    color: var(--colour-1);
+  }
 
-    .hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-    }
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-    }
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+    background-color: var(--colour-2);
+  }
 
-    a{
-        text-decoration: none;
-        color: var(--colour-1);
-    }
+  .nav-item {
+    margin: 16px 0;
+  }
+  .nav-menu.active {
+    left: 0;
+  }
 
-    .nav-menu{
-        position:fixed;
-        left: -100%;
-        top: 70px;
-        gap: 0;
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-        transition: 0.3s;
-        background-color: var(--colour-2);
-    }
+  .logo {
+    display: none;
+  }
 
-    .nav-item{
-        margin: 16px 0;
-    }
-    .nav-menu.active{
-        left: 0;
-    }
+  /* ABOUT PAGE */
+  .wrapper {
+    flex-direction: column;
+  }
+  .image-container img {
+    width: 200px;
+    height: 200px;
+  }
 
-    .logo{
-        display: none;
-    }
+  /* SKILLS */
+  .skills-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
+  .skills-container img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 45%;
+  }
 
-    /* ABOUT PAGE */
-    .wrapper{
-        flex-direction: column;
-    }
-    .image-container img{
-        width: 200px;
-        height: 200px;
-    }
+  /* EXPERIENCE */
+  /* Table formatting */
+  table {
+    border: 0;
+  }
 
-    /* SKILLS */
-    .skills-container{
-        grid-template-columns: repeat(2, 1fr);
-    }
+  table caption {
+    font-size: 1.3em;
+  }
 
-    .skills-container img{
-        margin-top: 8px;
-        vertical-align: middle;
-        width: 45%;
-    }
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
 
-    /* EXPERIENCE */
-    /* Table formatting */
-    table {
-        border: 0;
-    }
-    
-    table caption {
-        font-size: 1.3em;
-    }
-      
-    table thead {
-        border: none;
-        clip: rect(0 0 0 0);
-        height: 1px;
-        margin: -1px;
-        overflow: hidden;
-        padding: 0;
-        position: absolute;
-        width: 1px;
-    }
-      
-    table tr {
-        border-bottom: 3px solid #ddd;
-        display: block;
-        margin-bottom: .625em;
-    }
-      
-    table td {
-        border-bottom: 1px solid #ddd;
-        display: block;
-        font-size: .8em;
-        text-align: right;
-      }
-      
-    table td::before {
-        content: attr(data-label);
-        float: left;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-      
-    table td:last-child {
-        border-bottom: 0;
-    }
-    
+  table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: 0.625em;
+  }
 
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: 0.8em;
+    text-align: right;
+  }
 
-    /* PROJECTS */
-    .projects-container{
-        grid-template-columns: repeat(1, 1fr);
-    }
+  table td::before {
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 
-    /* CONTACT */
-    .contact {
-        width: 100%;
-    }
+  table td:last-child {
+    border-bottom: 0;
+  }
 
-    .contact-box{
-		grid-template-columns: 1fr;
-        width: 300px;
-	}
-	.left{
-		height: 200px;
-	}
+  /* PROJECTS */
+  .projects-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
-    .right {
-        width: 300px;
-    }
+  /* CONTACT */
+  .contact {
+    width: 100%;
+  }
 
+  .contact-box {
+    grid-template-columns: 1fr;
+    width: 300px;
+  }
+  .left {
+    height: 200px;
+  }
 
-
-
-
+  .right {
+    width: 300px;
+  }
 }
