Addressed the violations shown in the accessibility checker

--- a/styles.css
+++ b/styles.css
@@ -169,20 +169,6 @@ li {
   text-align: left;
 }
 
-/* #social-links a {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
-  color:#264766;
-} */
-
-
-
-
 
 
 /* SKILLS Section */
@@ -210,12 +196,12 @@ li {
 /* EXPERIENCE section */
 .experience {
   text-align: center;
+  margin: 5% 10%;
 }
 
 .experience p {
   vertical-align: baseline;
   text-align: left;
-  margin: 10px;
 }
 
 /* Table formatting */
@@ -283,6 +269,8 @@ table th {
   color: #264766;
 }
 
+
+
 /* CONTACT section */
 .contact {
   position: relative;
@@ -326,37 +314,6 @@ table th {
 .right {
   padding: 25px 40px;
 }
-
-/* .field{
-	width: 100%;
-	border: 2px solid rgba(0, 0, 0, 0);
-	outline: none;
-	background-color: rgba(230, 230, 230, 0.6);
-	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
-	margin-bottom: 22px;
-	transition: .3s;
-}
-
-.field:hover{
-	background-color: rgba(0, 0, 0, 0.1);
-}
-
-textarea{
-	min-height: 150px;
-}
-
-.btn{
-	width: 100%;
-	padding: 0.5rem 1rem;
-	background-color: var(--colour-2);
-	color: var(--colour-1);
-	font-size: 1.1rem;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	transition: .3s;
-} */
 
 label {
   float: left;
